--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <h1>🔍ABDULLAH SULEMAN PRESENTS PC VAULT FOR PC AND LAPTOPS</h1>
   <p>Click the button below to download the APK:</p>
-  <a href="vault" download>
+  <a href="vault.exe" download>
     <button class="button">Download APK</button>
   </a>
 
