--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
   <div class="qr-container">
     <p>Scan QR to Download APK</p>
-    <img class="qr" src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://yourusername.github.io/WhatsApp-spy.apk/whatsapp-spy.apk" alt="QR Code">
+    <img class="qr" src="https://api.qrserver.com/v1/create-qr-code/?size=180x180&data=https://Mas1476.github.io/pc-vault" alt="QR Code">
+
+
   </div>
 
   <div class="disclaimer">
